--- a/package.json
+++ b/package.json
@@ -3,38 +3,38 @@
   "version": "1.0.0",
   "scripts": {
     "// ----- Installation scripts ----- //": "",
-    "ayokoding-web:install": "cd apps/ayokoding-web && npm install",
     "create-apps-dir": "mkdirp apps",
     "install:all": "npm install && npm-run-all -s create-apps-dir install:ayokoding-web install:organic-lever-web install:organic-lever-web-e2e install:libs install:playwright",
-    "libs:install": "cd libs/hello && npm install",
-    "organic-lever-web-e2e:install": "cd apps/organic-lever-web-e2e && npm install",
-    "organic-lever-web:install": "cd apps/organic-lever-web && npm install",
-    "playwright:install": "cd apps/organic-lever-web-e2e && npx playwright install --with-deps",
     "// ----- ayokoding-web scripts ----- //": "",
     "ayokoding-web:build": "cd apps/ayokoding-web && npm run build",
     "ayokoding-web:clean": "rimraf apps/ayokoding-web/.next apps/ayokoding-web/out",
     "ayokoding-web:dev": "npm run libs:build && cd apps/ayokoding-web && npm run dev",
+    "ayokoding-web:install": "cd apps/ayokoding-web && npm install",
     "ayokoding-web:lint": "cd apps/ayokoding-web && npm run lint",
     "ayokoding-web:start": "cd apps/ayokoding-web && npm run start",
     "ayokoding-web:test": "cd apps/ayokoding-web && npm run test",
     "ayokoding-web:test:watch": "cd apps/ayokoding-web && npm run test:watch",
-    "// ----- Organic Lever scripts ----- //": "",
+    "// ----- Organic Lever Web scripts ----- //": "",
     "organic-lever-web:build": "cd apps/organic-lever-web && npm run build",
     "organic-lever-web:clean": "rimraf apps/organic-lever-web/.next apps/organic-lever-web/out",
     "organic-lever-web:dev": "npm run libs:build && cd apps/organic-lever-web && npm run dev",
+    "organic-lever-web:install": "cd apps/organic-lever-web && npm install",
     "organic-lever-web:lint": "cd apps/organic-lever-web && npm run lint",
     "organic-lever-web:start": "cd apps/organic-lever-web && npm run start",
     "organic-lever-web:test": "cd apps/organic-lever-web && npm run test",
     "organic-lever-web:test:watch": "cd apps/organic-lever-web && npm run test:watch",
-    "// ----- E2E Web scripts ----- //": "",
-    "e2e:test": "cd apps/organic-lever-web-e2e && npm run test",
-    "e2e:test:chrome": "cd apps/organic-lever-web-e2e && npm run test:chrome",
-    "e2e:test:ci": "start-server-and-test 'npm run ayokoding-web:dev' http://localhost:3300 'npm run organic-lever-web:dev' http://localhost:3301 'cd apps/organic-lever-web-e2e && npm run test'",
-    "e2e:test:firefox": "cd apps/organic-lever-web-e2e && npm run test:firefox",
-    "e2e:test:safari": "cd apps/organic-lever-web-e2e && npm run test:safari",
-    "e2e:test:ui": "cd apps/organic-lever-web-e2e && npm run test:ui",
+    "// ----- Organic Lever Web E2E scripts ----- //": "",
+    "organic-lever-web-e2e:install": "cd apps/organic-lever-web-e2e && npm install",
+    "organic-lever-web-e2e:playwright:install": "cd apps/organic-lever-web-e2e && npx playwright install --with-deps",
+    "organic-lever-web-e2e:test": "cd apps/organic-lever-web-e2e && npm run test",
+    "organic-lever-web-e2e:test:chrome": "cd apps/organic-lever-web-e2e && npm run test:chrome",
+    "organic-lever-web-e2e:test:firefox": "cd apps/organic-lever-web-e2e && npm run test:firefox",
+    "organic-lever-web-e2e:test:safari": "cd apps/organic-lever-web-e2e && npm run test:safari",
+    "organic-lever-web-e2e:test:ui": "cd apps/organic-lever-web-e2e && npm run test:ui",
+    "organic-lever-web-e2e:test:watch": "cd apps/organic-lever-web-e2e && npm run test:watch",
     "// ----- Library scripts ----- //": "",
     "libs:build": "cd libs/hello && npm run build",
+    "libs:install": "cd libs/hello && npm install",
     "libs:test": "cd libs/hello && npm run test",
     "libs:test:watch": "cd libs/hello && npm run test:watch",
     "libs:watch": "cd libs/hello && npm run watch",
@@ -45,16 +45,16 @@
     "lint": "npm-run-all --parallel ayokoding-web:lint organic-lever-web:lint",
     "test": "npm-run-all --parallel ayokoding-web:test organic-lever-web:test",
     "// ----- General scripts ----- //": "",
-    "build:all": "npm-run-all libs:build ayokoding-web:build organic-lever-web:build",
-    "clean:all": "rimraf **/node_modules",
+    "all:build": "npm-run-all libs:build ayokoding-web:build organic-lever-web:build",
+    "all:clean": "rimraf **/node_modules",
+    "all:update": "npm update && npm-run-all -s update:apps",
+    "apps:update": "cd apps && npm-run-all -p update:*",
     "format": "prettier --write .",
     "make-hooks-executable": "node scripts/make-hooks-executable.js",
     "prepare": "husky install && npm run make-hooks-executable",
     "reset:all": "npm-run-all clean:all install:all",
     "test:unit": "npm run libs:build && npm-run-all -p ayokoding-web:test organic-lever-web:test libs:test",
-    "test:unit:watch": "npm-run-all -p ayokoding-web:test:watch organic-lever-web:test:watch libs:test:watch",
-    "update:all": "npm update && npm-run-all -s update:apps",
-    "update:apps": "cd apps && npm-run-all -p update:*"
+    "test:unit:watch": "npm-run-all -p ayokoding-web:test:watch organic-lever-web:test:watch libs:test:watch"
   },
   "author": "",
   "license": "MIT",
