--- a/.github/workflows/build-and-unit-tests.yml
+++ b/.github/workflows/build-and-unit-tests.yml
@@ -19,13 +19,13 @@ jobs:
           node-version: "20.17.0"
 
       - name: Install dependencies
-        run: npm run install:all
+        run: npm run all:install
 
       - name: Install and build libraries
-        run: npm run build:libs
+        run: npm run libs:build
 
       - name: Build apps
-        run: npm run build:all
+        run: npm run all:build
 
       - name: Run unit tests
         run: npm run test:unit
