--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -17,13 +17,13 @@ jobs:
           node-version: "20.17.0"
 
       - name: Install dependencies
-        run: npm run install:all
+        run: npm run all:install
 
       - name: Build libraries
-        run: npm run build:libs
+        run: npm run libs:build
 
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
       - name: Run E2E tests
-        run: npm run test:e2e:ci
+        run: npm run organic-lever-web-e2e:test
