--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "// ----- Installation scripts ----- //": "",
     "create-apps-dir": "mkdirp apps",
-    "install:all": "npm install && npm-run-all -s create-apps-dir install:ayokoding-web install:organic-lever-web install:organic-lever-web-e2e install:libs install:playwright",
+    "all:install": "npm install && npm-run-all -s create-apps-dir ayokoding-web:install organic-lever-web:install organic-lever-web-e2e:install libs:install organic-lever-web-e2e:playwright:install",
     "// ----- ayokoding-web scripts ----- //": "",
     "ayokoding-web:build": "cd apps/ayokoding-web && npm run build",
     "ayokoding-web:clean": "rimraf apps/ayokoding-web/.next apps/ayokoding-web/out",
@@ -47,12 +47,12 @@
     "// ----- General scripts ----- //": "",
     "all:build": "npm-run-all libs:build ayokoding-web:build organic-lever-web:build",
     "all:clean": "rimraf **/node_modules",
+    "all:reset": "npm-run-all all:clean all:install",
     "all:update": "npm update && npm-run-all -s update:apps",
     "apps:update": "cd apps && npm-run-all -p update:*",
     "format": "prettier --write .",
     "make-hooks-executable": "node scripts/make-hooks-executable.js",
     "prepare": "husky install && npm run make-hooks-executable",
-    "reset:all": "npm-run-all clean:all install:all",
     "test:unit": "npm run libs:build && npm-run-all -p ayokoding-web:test organic-lever-web:test libs:test",
     "test:unit:watch": "npm-run-all -p ayokoding-web:test:watch organic-lever-web:test:watch libs:test:watch"
   },
