--- a/libs/hello/package.json
+++ b/libs/hello/package.json
@@ -15,5 +15,9 @@
     "jest": "^29.0.0",
     "ts-jest": "^29.0.0",
     "@types/jest": "^29.0.0"
+  },
+  "project": {
+    "kind": "npm",
+    "dependencies": []
   }
 }
