--- a/apps/ayokoding-web/package.json
+++ b/apps/ayokoding-web/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev -p 3300",
     "build": "next build",
+    "clean": "rimraf .next out",
+    "dev": "next dev -p 3300",
     "start": "next start -p 3300",
     "lint": "next lint",
     "test": "jest",
@@ -31,5 +32,11 @@
     "@testing-library/jest-dom": "^6.0.0",
     "jest-environment-jsdom": "^29.0.0",
     "@types/jest": "^29.0.0"
+  },
+  "project": {
+    "kind": "npm",
+    "dependencies": [
+      "libs/hello"
+    ]
   }
 }
