--- a/apps/organic-lever-web-e2e/package.json
+++ b/apps/organic-lever-web-e2e/package.json
@@ -3,10 +3,16 @@
   "version": "1.0.0",
   "description": "E2E tests for ayokoding-web",
   "scripts": {
+    "install:with-deps": "npx playwright install --with-deps",
     "test": "playwright test",
     "test:ui": "playwright test --ui",
     "test:chrome": "playwright test --project=chromium",
     "test:firefox": "playwright test --project=firefox",
-    "test:safari": "playwright test --project=webkit"
+    "test:safari": "playwright test --project=webkit",
+    "test:watch": "playwright test --watch"
+  },
+  "project": {
+    "kind": "npm",
+    "dependencies": []
   }
 }
