--- a/repo-manager/Cargo.toml
+++ b/repo-manager/Cargo.toml
@@ -6,3 +6,13 @@ edition = "2021"
 [dependencies]
 clap = "3.0"
 serde_json = "1.0"
+
+[[bin]]
+name = "repo-manager"
+path = "src/main.rs"
+
+[profile.release]
+opt-level = 'z'   # Optimize for size
+lto = true
+codegen-units = 1
+panic = 'abort'
