--- a/repo-manager/Cargo.toml
+++ b/repo-manager/Cargo.toml
@@ -16,3 +16,6 @@ opt-level = 'z'   # Optimize for size
 lto = true
 codegen-units = 1
 panic = 'abort'
+
+[package.metadata.cargo-dist]
+output-dir = ".."
