--- a/libs/hello/package.json
+++ b/libs/hello/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "watch": "tsc-watch --onSuccess \"echo Library built successfully\"",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "dev": "tsc --watch"
   },
   "devDependencies": {
     "typescript": "^5.0.0",
