--- a/mngr/Cargo.toml
+++ b/mngr/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "repo-manager"
+name = "mngr"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,7 +8,7 @@ clap = "3.0"
 serde_json = "1.0"
 
 [[bin]]
-name = "repo-manager"
+name = "mngr"
 path = "src/main.rs"
 
 [profile.release]
