--- a/mngr/mngr.fsproj
+++ b/mngr/mngr.fsproj
@@ -6,7 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Types.fs" />
     <Compile Include="Config.fs" />
+    <Compile Include="Utils.fs" />
+    <Compile Include="Commands.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
