--- a/mngr/mngr.fsproj
+++ b/mngr/mngr.fsproj
@@ -9,6 +9,7 @@
     <Compile Include="Types.fs" />
     <Compile Include="Config.fs" />
     <Compile Include="Utils.fs" />
+    <Compile Include="PackageManager/NPM.fs" />
     <Compile Include="Commands.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
