mngr: add project type npm

--- a/mngr/mngr.fsproj
+++ b/mngr/mngr.fsproj
@@ -12,6 +12,7 @@
     <Compile Include="PackageManager/NPM.fs" />
     <Compile Include="Commands/Initialize.fs" />
     <Compile Include="Commands/Reset.fs" />
+    <Compile Include="Commands/Clean.fs" />
     <Compile Include="Commands/Help.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
