--- a/mngr/mngr.fsproj
+++ b/mngr/mngr.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="PackageManager/ProjectKind.fs" />
     <Compile Include="Types.fs" />
     <Compile Include="Config.fs" />
     <Compile Include="Utils.fs" />
