--- a/mngr/mngr.fsproj
+++ b/mngr/mngr.fsproj
@@ -9,7 +9,8 @@
     <Compile Include="PackageManager/ProjectKind.fs" />
     <Compile Include="Types.fs" />
     <Compile Include="Config.fs" />
-    <Compile Include="Utils.fs" />
+    <Compile Include="Utils/Commons.fs" />
+    <Compile Include="Utils/Spinner.fs" />
     <Compile Include="PackageManager/NPM.fs" />
     <Compile Include="Commands/Initialize.fs" />
     <Compile Include="Commands/Reset.fs" />
