--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "dependencies": {
     "@notionhq/client": "^2.2.15",
     "fs-extra": "^11.1.1",
-    "next": "^14.2.8",
+    "next": "^14.2.13",
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-query": "^3.39.3"
@@ -38,10 +38,13 @@
   },
   "license": "MIT",
   "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
+    "**/*": "prettier --write --ignore-unknown",
+    "**/*.fs": "dotnet tool run fantomas"
   },
   "name": "the-organic",
-  "scripts": {},
+  "scripts": {
+    "format:fs": "dotnet tool run fantomas . --recurse"
+  },
   "version": "1.0.0",
   "volta": {
     "node": "20.17.0",
