--- a/mngr/mngr.fsproj
+++ b/mngr/mngr.fsproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Domains/PackageManager/ProjectKind.fs" />
     <Compile Include="Domains/PackageManager/Project.fs" />
     <Compile Include="Utils/Commons.fs" />
     <Compile Include="Types.fs" />
