--- a/mngr/mngr.fsproj
+++ b/mngr/mngr.fsproj
@@ -8,8 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Domains/PackageManager/ProjectKind.fs" />
     <Compile Include="Domains/PackageManager/Project.fs" />
+    <Compile Include="Domains/Repo.fs" />
     <Compile Include="Utils/Commons.fs" />
     <Compile Include="Types.fs" />
     <Compile Include="Tools.fs" />
