--- a/mngr/mngr.fsproj
+++ b/mngr/mngr.fsproj
@@ -10,7 +10,7 @@
   <ItemGroup>
     <Compile Include="Domains/PackageManager/Project.fs" />
     <Compile Include="Domains/GitRepo.fs" />
-    <Compile Include="Utils/Commons.fs" />
+    <Compile Include="Domains/Terminal.fs" />
     <Compile Include="Types.fs" />
     <Compile Include="Tools.fs" />
     <Compile Include="Config.fs" />
