--- a/mngr/mngr.fsproj
+++ b/mngr/mngr.fsproj
@@ -11,10 +11,10 @@
     <Compile Include="Domains/Terminal.fs" />
     <Compile Include="Domains/PackageManager/Project.fs" />
     <Compile Include="Domains/GitRepo.fs" />
-    <Compile Include="Domains/CLI/Options.fs" />
     <Compile Include="Domains/Tooling.fs" />
     <Compile Include="Config.fs" />
     <Compile Include="Domains/PackageManager/NPM.fs" />
+    <Compile Include="Domains/CLI/Menu.fs" />
     <Compile Include="Domains/CLI/Commands/Initialize.fs" />
     <Compile Include="Domains/CLI/Commands/Reset.fs" />
     <Compile Include="Domains/CLI/Commands/Clean.fs" />
