--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
   "name": "the-organic",
   "scripts": {
     "format:fs": "dotnet tool run fantomas . --recurse",
-    "build:mngr": "dotnet publish mngr/mngr.fsproj -c Release -o ./mngr-published && chmod +x ./tmngr",
-    "test:mngr": "cd mngr/mngr.Tests && dotnet test",
+    "mngr:build": "dotnet publish mngr/mngr.fsproj -c Release -o ./mngr-published && chmod +x ./tmngr",
+    "mngr:test:unit": "cd mngr/mngr.Tests && dotnet test",
     "tmngr": "dotnet mngr-published/mngr.dll"
   },
   "version": "1.0.0",
