--- a/apps/ayokoding-web/package.json
+++ b/apps/ayokoding-web/package.json
@@ -9,7 +9,8 @@
     "dev": "next dev -p 3300",
     "start": "next start -p 3300",
     "lint": "next lint",
-    "test": "jest",
+    "test": "npm run test:unit",
+    "test:unit": "jest",
     "test:watch": "jest --watch"
   },
   "dependencies": {
