--- a/the-khadim/khadim.Tests/khadim.Tests.fsproj
+++ b/the-khadim/khadim.Tests/khadim.Tests.fsproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\tmngr.fsproj" />
+    <ProjectReference Include="..\khadim.fsproj" />
   </ItemGroup>
 
 </Project>
