sentinel-web: make navigation to the left

--- a/apps/sentinel-web/package.json
+++ b/apps/sentinel-web/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "concurrently \"npm run watch-css\" \"npm run start-server\"",
     "watch-css": "tailwindcss -i ./src/input.css -o ./static/styles.css --watch",
-    "build-css": "tailwindcss -i ./src/input.css -o ./static/styles.css --minify",
+    "build-css": "tailwindcss -i ./src/input.css -o ./static/css/output.css --minify",
     "start-server": "source sentinel-web/bin/activate && PYTHONPATH=$PWD uvicorn app.main:app --reload",
     "test:unit": "bash -c 'source sentinel-web/bin/activate && PYTHONPATH=$PWD pytest tests/unit -v || echo \"No tests found or all tests passed\"'",
     "postinstall": "bash setup-python.sh && npm run build-css"
