--- a/apps/sentinel-web/package.json
+++ b/apps/sentinel-web/package.json
@@ -6,7 +6,7 @@
     "dev": "concurrently \"npm run watch-css\" \"npm run start-server\"",
     "watch-css": "tailwindcss -i ./src/input.css -o ./static/styles.css --watch",
     "build-css": "tailwindcss -i ./src/input.css -o ./static/css/output.css --minify",
-    "start-server": "source sentinel-web/bin/activate && PYTHONPATH=$PWD uvicorn app.main:app --reload",
+    "start-server": "source sentinel-web/bin/activate && PYTHONPATH=$PWD uvicorn app.main:app --reload --port $(python -c 'from app.config import PORT; print(PORT)')",
     "test:unit": "source sentinel-web/bin/activate && PYTHONPATH=$PWD pytest tests/unit -n auto -v",
     "postinstall": "bash setup-python.sh && npm run build-css"
   },
