--- a/apps/sentinel-web/package.json
+++ b/apps/sentinel-web/package.json
@@ -8,7 +8,8 @@
     "build-css": "tailwindcss -i ./src/input.css -o ./static/css/output.css --minify",
     "start-server": "source sentinel-web/bin/activate && PYTHONPATH=$PWD uvicorn app.main:app --reload --port $(python -c 'from app.config import PORT; print(PORT)')",
     "test:unit": "source sentinel-web/bin/activate && PYTHONPATH=$PWD pyright && PYTHONPATH=$PWD pytest tests/unit -n auto -v",
-    "postinstall": "bash setup-python.sh && npm run build-css"
+    "postinstall": "bash setup-python.sh && npm run build-css",
+    "format": "source sentinel-web/bin/activate && black app tests"
   },
   "dependencies": {
     "htmx.org": "^1.9.2"
