sentinel-web: add back-up db in settings

--- a/apps/sentinel-web/config.json
+++ b/apps/sentinel-web/config.json
@@ -1,4 +1,5 @@
 {
   "port": 8001,
-  "db_path": "~/local-db/sentinel-db/sentinel.db"
+  "db_path": "~/local-db/sentinel-db/sentinel.db",
+  "db_path_backup": "~/local-db/sentinel-db/sentinel_backup.db"
 }
