organic-lever-web: add test

--- a/apps/organic-lever-web/tsconfig.json
+++ b/apps/organic-lever-web/tsconfig.json
@@ -21,7 +21,7 @@
       "@/*": ["./src/*"],
       "@libs/*": ["../../libs/*"]
     },
-    "types": ["jest", "node"]
+    "types": ["jest", "node", "vitest/globals"]
   },
   "include": [
     "next-env.d.ts",
