--- a/apps/organic-lever-web/package.json
+++ b/apps/organic-lever-web/package.json
@@ -8,31 +8,37 @@
     "build": "next build",
     "start": "next start -p 3301",
     "lint": "next lint",
-    "test": "npm run test:unit",
-    "test:unit": "jest",
-    "test:watch": "jest --watch",
+    "test": "vitest run src/__tests__",
+    "test:unit": "vitest run src/__tests__",
+    "test:unit:watch": "vitest src/__tests__",
+    "test:ui": "vitest --ui src/__tests__",
+    "coverage": "vitest run --coverage src/__tests__",
     "clean": "rimraf .next out"
   },
   "dependencies": {
     "@libs/hello": "file:../../libs/hello",
+    "@vitejs/plugin-react": "^4.3.1",
+    "next": "^14.1.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.8"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitest/ui": "^0.34.0",
+    "eslint": "^8",
+    "eslint-config-next": "^14.1.0",
+    "jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.0.0",
+    "jsdom": "^22.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.8",
-    "jest": "^29.0.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/jest-dom": "^6.0.0",
-    "jest-environment-jsdom": "^29.0.0",
-    "@types/jest": "^29.0.0"
+    "typescript": "^5",
+    "vitest": "^0.34.0"
   },
   "project": {
     "kind": "npm",
