--- a/apps/organic-lever-web/package.json
+++ b/apps/organic-lever-web/package.json
@@ -18,9 +18,14 @@
   "dependencies": {
     "@libs/hello": "file:../../libs/hello",
     "@vitejs/plugin-react": "^4.3.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.446.0",
     "next": "^14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.0.0",
