--- a/apps/organic-lever-web/package.json
+++ b/apps/organic-lever-web/package.json
@@ -13,7 +13,8 @@
     "test:unit:watch": "vitest src/__tests__",
     "test:ui": "vitest --ui src/__tests__",
     "coverage": "vitest run --coverage src/__tests__",
-    "clean": "rimraf .next out"
+    "clean": "rimraf .next out",
+    "dev:custom-db": "DATABASE_URL=./custom-members.sqlite next dev -p 3301"
   },
   "dependencies": {
     "@libs/hello": "file:../../libs/hello",
@@ -21,11 +22,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.446.0",
-    "next": "^14.1.0",
+    "next": "^14.2.8",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "sqlite3": "^5.1.6",
+    "sqlite": "^5.0.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.0.0",
@@ -43,7 +47,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
-    "vitest": "^0.34.0"
+    "vitest": "^0.34.0",
+    "@types/uuid": "^9.0.1"
   },
   "project": {
     "kind": "npm",
