--- a/apps/organic-lever-web/tsconfig.json
+++ b/apps/organic-lever-web/tsconfig.json
@@ -18,8 +18,7 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"],
-      "@libs/*": ["../../libs/*"]
+      "@/*": ["./src/*"]
     },
     "types": ["jest", "node", "vitest/globals"]
   },
