--- a/apps/organic-lever-web/package.json
+++ b/apps/organic-lever-web/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@libs/hello": "file:../../libs/hello",
+    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query-devtools": "^5.58.0",
     "@vitejs/plugin-react": "^4.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -25,19 +27,20 @@
     "next": "^14.2.8",
     "react": "^18",
     "react-dom": "^18",
+    "sqlite": "^5.0.1",
+    "sqlite3": "^5.1.6",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "sqlite3": "^5.1.6",
-    "sqlite": "^5.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.1",
     "@vitest/ui": "^0.34.0",
     "eslint": "^8",
     "eslint-config-next": "^14.1.0",
@@ -47,8 +50,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
-    "vitest": "^0.34.0",
-    "@types/uuid": "^9.0.1"
+    "vitest": "^0.34.0"
   },
   "project": {
     "kind": "npm",
