--- a/apps/organic-lever-web/package.json
+++ b/apps/organic-lever-web/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@libs/hello": "file:../../libs/hello",
+    "@radix-ui/react-icons": "^1.3.0",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.58.0",
     "@vitejs/plugin-react": "^4.3.1",
