--- a/apps/organic-lever-web/package.json
+++ b/apps/organic-lever-web/package.json
@@ -18,7 +18,9 @@
   },
   "dependencies": {
     "@libs/hello": "file:../../libs/hello",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.58.0",
