--- a/apps/ayokoding-web/package.json
+++ b/apps/ayokoding-web/package.json
@@ -15,24 +15,25 @@
   },
   "dependencies": {
     "@libs/hello": "file:../../libs/hello",
+    "lucide-react": "^0.446.0",
+    "next": "14.2.8",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.8"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "jest": "^29.0.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/jest-dom": "^6.0.0",
     "jest-environment-jsdom": "^29.0.0",
-    "@types/jest": "^29.0.0"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   },
   "project": {
     "kind": "npm",
